# tvn-archivo-historico

docs/: architecture.md  problem_description.md
docs/curation/: overview.md
docs/ingestion/: component_1_chunking.md  component_1_segmentation.md  component_2_audio.md  component_3_visual.md  component_4_linking.md  component_5_scene_understanding.md  component_6_unification.md  data_flow.md  overview.md
docs/retrieval/: api_contract.md  overlap_handling.md  overview.md  query_patterns.md
docs/shared/: data_models.md  glossary.md  storage_interface.md
docs/technical_architecture/: component_apis.md  data_models.md  deployment.md  implementation_details.md  overview.md  performance.md  project_structure.md  technology_stack.md
docs/ui/: api_consumption.md  data_presentation.md  overview.md  user_flows.md
ingestion/: audio.md
ingestion/c1_chunking/: README.md  __init__.py  chunk_video.py  main.py  pyproject.toml  requirements.txt
ingestion/c1_chunking/config/: chunking_config.py
ingestion/c1_chunking/services/: __init__.py  video_chunker.py
ingestion/c1_segmentation/: README.md  main.py  pyproject.toml
ingestion/c1_segmentation/config/: __init__.py
ingestion/c2_audio/: .gitignore  README.md  __init__.py  check_dependencies.py  example_usage.py  nvidia_readme.md  process_audio.py  pyproject.toml  requirements.txt
ingestion/c2_audio/config/: __init__.py  audio_config.py
ingestion/component_1_segmentation/: __init__.py  requirements.txt
ingestion/component_1_segmentation/api/: __init__.py
ingestion/shared/: __init__.py
(+2 files in other folders)
