[project]
name = "c2-audio"
version = "0.1.0"
description = "Audio transcription and speaker diarization using NVIDIA NeMo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "omegaconf>=2.3.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]

[project.scripts]
process-audio = "process_audio:main"
